--- a/socreport.bib
+++ b/socreport.bib
@@ -220,6 +220,22 @@
                   without pre-training.}
 }
 
+@Article{Backus_1978,
+  author          = {Backus, John},
+  title           = {Can programming be liberated from the von Neumann style?: a
+                  functional style and its algebra of programs},
+  year            = 1978,
+  volume          = 21,
+  number          = 8,
+  month           = {Aug},
+  pages           = {613–641},
+  issn            = {0001-0782},
+  doi             = {10.1145/359576.359579},
+  url             = {http://dx.doi.org/10.1145/359576.359579},
+  journal         = {Communications of the ACM},
+  publisher       = {Association for Computing Machinery (ACM)}
+}
+
 @Article{Cybenko1989,
   author          = "Cybenko, G.",
   title           = "Approximation by superpositions of a sigmoidal function",
@@ -995,6 +1011,17 @@
   doi             = {10.1088/0954-898x_7_4_005},
   url             = {https://doi.org/10.1088/0954-898x_7_4_005},
   DATE_ADDED      = {Sat Nov 2 19:32:20 2019},
+}
+
+@article{thorpe2001spike,
+  title           = {Spike-based strategies for rapid processing},
+  author          = {Thorpe, Simon and Delorme, Arnaud and Van Rullen, Rufin},
+  journal         = {Neural networks},
+  volume          = 14,
+  number          = {6-7},
+  pages           = {715--725},
+  year            = 2001,
+  publisher       = {Elsevier}
 }
 
 @article{training_deep_snn_bpp_lee,
