--- a/socreport.bib
+++ b/socreport.bib
@@ -751,6 +751,17 @@
   year            = 2000
 }
 
+@article{hochreiter1997long,
+  title           = {Long short-term memory},
+  author          = {Hochreiter, Sepp and Schmidhuber, J{\"u}rgen},
+  journal         = {Neural computation},
+  volume          = 9,
+  number          = 8,
+  pages           = {1735--1780},
+  year            = 1997,
+  publisher       = {MIT Press}
+}
+
 @article{ivanov19_moder_deep_reinf_learn_algor,
   author          = {Ivanov, Sergey and D'yakonov, Alexander},
   title           = {Modern Deep Reinforcement Learning Algorithms},
