Updates from Overleaf

--- a/report.tex
+++ b/report.tex
@@ -1,14 +1,12 @@
 \documentclass[fyp]{socreport}
-\usepackage[utf8]{inputenc}
-\usepackage[english]{babel}
 \usepackage{charter}
 \usepackage{fullpage}
 \usepackage{hyperref}
 \usepackage{amsmath}
+\usepackage{csquotes}
 \usepackage{booktabs}
 \usepackage{graphicx}
-\usepackage[backend=biber,sorting=none]{biblatex}
-\addbibresource{socreport.bib}
+\bibliography{socreport.bib}
 
 \begin{document}
 \pagenumbering{roman}
